# pkg/server/config.go
@@ -434,7 +434,7 @@ var Roles = []iamv1.GlobalRole{
 			},
 			{
 				APIGroups: []string{"core.kubeclipper.io"},
-				Resources: []string{"clusters/plugins", "clusters/nodes", "clusters/backups", "clusters/cronbackups"},
+				Resources: []string{"clusters/plugins", "clusters/nodes", "clusters/backups", "clusters/cronbackups", "clusters/certification"},
 				Verbs:     []string{"*"},
 			},
 			{
